--- a/classification/requirements.txt
+++ b/classification/requirements.txt
@@ -1,8 +1,12 @@
 torch==2.4.0
+torchvision==0.19.0
+torchaudio==2.4.0
+
 transformers==4.44.0
 datasets==3.0.2
 peft==0.13.2
 glm_saga==0.1.2
 evaluate==0.4.0
-torchvision==0.17.0
-scikit-learn==1.3.0
+
+numpy==1.26.4
+scikit-learn==1.5.2
