Enhance README with project overview and setup
Added project details, setup instructions, and acknowledgments.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,71 @@
+# OS
 .DS_Store
+Thumbs.db
+
+# Python bytecode / caches
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.pytest_cache/
+.mypy_cache/
+.pyre/
+.ruff_cache/
+.hypothesis/
+
+# Virtual environments
+.venv/
+venv/
+env/
+ENV/
+
+# Packaging / build
+build/
+dist/
+*.egg-info/
+.eggs/
+pip-wheel-metadata/
+
+# Jupyter
+.ipynb_checkpoints/
+
+# Coverage / test output
+.coverage
+.coverage.*
+htmlcov/
+.tox/
+.nox/
+
+# Logs / local runtime files
+*.log
+*.pid
+*.out
+*.err
+
+# IDE
+.vscode/
+.idea/
+
+# Local secrets / config
+.env
+.env.*
+*.local
+
+# ML model checkpoints / weights
+*.pt
+*.pth
+*.ckpt
+*.bin
+*.safetensors
+**/*_epoch_*/
+
+# Project-specific generated checkpoint folders
+classification/mpnet_acs/
+generation/from_pretained_llama3_lora_cbm/
+
+# Local data/artifacts (uncomment if needed)
+# data/
+# outputs/
+# artifacts/
+# wandb/
+# mlruns/
